# zsheets

./: CLAUDE.md  Cargo.toml  Info.plist  TODO.md  build.sh
src/: assets.rs  cell.rs  command_palette.rs  file_io.rs  file_state.rs  grid.rs  main.rs  menu.rs  metadata.rs  state.rs  theme.rs
