[package]
name = "gpui-spreadsheet"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "src/main.rs"
name = "spreadsheet"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }
rust-embed = "8"
unicode-segmentation = "1"

[target.'cfg(target_os = "macos")'.dependencies]
core-text = "=21.0.0"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSColor", "NSColorSpace"] }
