[package]
name = "zsheets"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "src/main.rs"
name = "zsheets"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }
rust-embed = "8"
unicode-segmentation = "1"
csv = "1.3"
rfd = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
core-text = "=21.0.0"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSColor", "NSColorSpace"] }
